log/build_2023-01-20_18-35-36/iwr6843_pub/stderr.log
/home/jingyan/.local/lib/python3.8/site-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
/home/jingyan/.local/lib/python3.8/site-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'install-scripts' will not be supported in future versions. Please use the underscore name 'install_scripts' instead
  warnings.warn(
  File "/home/jingyan/handhold_radar_test/install/iwr6843_pub/lib/python3.8/site-packages/iwr6843_pub/Ros2bag_time_update.py", line 34
    using namespace std::chrono_literals;
          ^
SyntaxError: invalid syntax

